Fixing page title cut off before scrolling on college site due to fix yesterday.

--- a/agsci/common/theme/assets/css/agsci.common.css
+++ b/agsci/common/theme/assets/css/agsci.common.css
@@ -11030,7 +11030,6 @@ header {
 }
 
 body.header-college-level header {
-  position: fixed;
   background-color: #001E44;
 }
 
