--- a/agsci/common/theme/assets/wpsu/_header-college-level.scss
+++ b/agsci/common/theme/assets/wpsu/_header-college-level.scss
@@ -43,9 +43,7 @@ header {
 }
 
 body.header-college-level header {
-    position: fixed;
     background-color: $color-ps-nittany-navy;
-
 }
 
 header.affix {
